030-software/fluxcd/apps/iptvnator/backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iptvnator-backend
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: iptvnator-backend
  template:
    metadata:
      labels:
        app: iptvnator-backend
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: iptvnator-backend
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: iptvnator-backend
      containers:
        - name: iptvnator-backend
          image: 4gray/iptvnator-backend:latest@sha256:c9bec994219ba85583e4c0fcbb6cf69a832ee460ade1b9aa613c0fd60c3a60f1
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 256Mi
          volumeMounts:
            - name: temp
              mountPath: /home/node/.npm
      volumes:
        - name: temp
          emptyDir:
            medium: Memory
