030-software/fluxcd/apps/iptvnator/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: iptvnator-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: iptvnator-backend
