030-software/fluxcd/apps/iptvnator/backend/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iptvnator-backend
spec:
  hostnames:
  - api.iptvnator.${domain}
  parentRefs:
  - name: iptvnator
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: api
  rules:
  - backendRefs:
    - name: iptvnator-backend
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - cors:
        allowOrigins:
        - https://iptvnator.${domain}
        allowMethods:
        - GET
        - OPTIONS
        allowHeaders:
        - DNT
        - X-CustomHeader
        - Keep-Alive
        - User-Agent
        - X-Requested-With
        - If-Modified-Since
        - Cache-Control
        - Content-Type
        allowCredentials: false
        maxAge: 3600
      type: CORS
